# CppDungeon

./: .clang-tidy  .gitignore  CMakeLists.txt  Monitor.cpp  main.cpp
.github/workflows/: ci.yml
include/: Action.h  Actions.h  ActionsChanger.h  Artefact.h  BattleField.h  BattleFieldChanger.h  Board.h  Boss.h  Buff.h  Cell.h  Characteristic.h  Chest.h  ChooseNextRoom.h  ChooseRoomEvent.h  Debuff.h  Disease.h  DontUse.h  Effect.h  EmptyCell.h  Enemy.h  EnemyEncounter.h  Entity.h  EntityChanger.h  Event.h  Guard.h  Hall.h  Hero.h  Inventory.h  InventoryChanger.h  Item.h  Main.h  Map.h  Monitor.cpp  Monitor.h  Move.h  MoveLeft.h  MoveRight.h  NPC.h  Player.h  Position.h  (+16 more)
include/actions/: Action.h  ChooseNextRoom.h  DeselectSkills.h  DontUse.h  Lose.h  MoveLeft.h  MoveRight.h  SelectSkill.h  TurnEvent.h  Use.h  UseItem.h  UseSkill.h  UserUseSkill.h  Win.h
include/bosses/GardenGuardian/: AnnihilatingGlare.h  BloodFount.h  GardenGuardian.h  GardenGuardianDamageBonus.h  GardenGuardianDefenceBonus.h  HatredBeyondTime.h  StoneShield.h
include/changers/: ActionsChanger.h  BattleFieldChanger.h  EffectChanger.h  EntityChanger.h  InventoryChanger.h  PositionChanger.h  SquadChanger.h
include/effects/: AutoAction.h  Bleed.h  Blight.h  Buff.h  Damage.h  Debuff.h  Disease.h  Effect.h  EffectGenerator.h  ForceMove.h  Guard.h  Heal.h  ImmediateCharacteristicEffect.h  ImmediateEffect.h  Mark.h  MarkAsEndBattleBattleFieldNeeded.h  MarkedAsBattleFieldNeeded.h  MarkedAsEndBattle.h  MarkedAsEndBattleEntityNeeded.h  MarkedAsEntityNeeded.h  MarkedAsResistable.h  MarkedAsTurnable.h  Move.h  PassiveBuff.h  PassiveDebuff.h  PercentHeal.h  PermanentEffect.h  Stun.h
include/enemies/: Boss.h  BrigandCutthroat.h  BrigandFusilier.h  BrigandRaider.h  CultistAcolyte.h  Enemy.h
include/enemies/BrigandFusier/: BlanketFire.h  BrigandFusilier.h  BrigantFusier.h  RushedShot.h
include/enemies/BrigandFusilier/: BrigandFusilier.h
include/enemies/BrigandRaider/: BrigandRaider.h  HarmlessPoke.h  Shank.h  SliceAndDice.h  UppercutSlice.h
include/enemies/CultistAcolyte/: CultistAcolyte.h  EldritchPull.h  EldritchPush.h  StressfulIncantation.h
include/enemies/CultistBrawler/: CultistBrawler.h  RendForTheOldGods.h  StumblingScratch.h
include/enemies/Ghoul/: Ghoul.h  Howl.h  Rend.h  SkullToss.h
include/enemies/PelagicGrouper/: PelagicGrouper.h  SeawardSlash.h  Spearfishing.h
include/enemies/RabidGnasher/: RabidGnasher.h  RabidRush.h
include/enemies/SwineSlasher/: HookWhereItHurts.h  SwineSlasher.h
include/enemies/Webber/: Bite.h  Web.h  Webber.h
include/entity/: Boss.h  Characteristic.h  Enemy.h  EnemyType.h  Entity.h  Hero.h  MarkedAsAutoTurn.h  NPC.h  Resistances.h  Trick.h
include/events/: BattleField.h  BossEncounter.h  Chest.h  ChooseRoomEvent.h  EmptyCell.h  EnemyEncounter.h  EnemyEncounter1.h  EnemyEncounter2.h  EnemyEncounter3.h  Event.h  NPCEncounter.h  Trap.h  UsableEvent.h
include/generators/: EffectGenerator.h  NumberGenerator.h  SkillActionsGenerator.h
include/heroes/: Hero.h  MarkedAsAutoTurn.h  NPC.h
include/heroes/BountyHunter/: BountyHunter.h  Caltrops.h  CollectBounty.h  ComeHither.h  FinishHim.h  FlashBang.h  MarkForDeath.h  UpperCut.h
include/items/: Absinthe.h  AbsintheEffect.h  BloodiedNeckerchief.h  BloodiedNeckerchiefEffect.h  FortifyingGarlic.h  FortifyingGarlicEffect.h  Item.h  LickWounds.h
include/monitor/: Monitor.h
include/namespaces/: actions.h  battlefield.h  changers.h  effects.h  entity.h  events.h  items.h  skillDesigns.h
include/navigation/: Cell.h  Hall.h  Map.h  Position.h  Room.h
include/player/: Inventory.h  Item.h  Player.h  Squad.h
include/skillDesigns/: BlanketFire.h  RangeSkill.h  SizedSkill.h  Skill.h  UniqueSizedSkill.h
src/: BattleField.cpp  BattleFieldChanger.cpp  Buff.cpp  Cell.cpp  Chest.cpp  ChooseNextRoom.cpp  ChooseRoomEvent.cpp  Debuff.cpp  Disease.cpp  DontUse.cpp  Effect.cpp  EmptyCell.cpp  Enemy.cpp  EnemyEncounter.cpp  EnemyEncouter.cpp  Entity.cpp  EntityChanger.cpp  Event.cpp  Guard.cpp  Hall.cpp  Inventory.cpp  InventoryChanger.cpp  Main.cpp  Map.cpp  MoveLeft.cpp  MoveRight.cpp  PassiveBuff.cpp  PassiveDebuff.cpp  Player.cpp  Position.cpp  PositionChanger.cpp  Room.cpp  Squad.cpp  SquadChanger.cpp  Stun.cpp  Use.cpp
src/Item/: Absinthe.cpp  AbsintheEffect.cpp  BloodiedNeckerchief.cpp  BloodiedNeckerchiefEffect.cpp  FortifyingGarlic.cpp  FortifyingGarlicEffect.cpp  Item.cpp  LickWounds.cpp
src/actions/: ChooseNextRoom.cpp  DeselectSkills.cpp  DontUse.cpp  Lose.cpp  MoveLeft.cpp  MoveRight.cpp  SelectSkill.cpp  TurnEvent.cpp  Use.cpp  UseItem.cpp  UseSkill.cpp  UserUseSkill.cpp  Win.cpp
src/changers/: ActionsChanger.cpp  EffectChanger.cpp  EntityChanger.cpp  InventoryChanger.cpp  PositionChanger.cpp
src/effects/: AutoAction.cpp  Bleed.cpp  Blight.cpp  Buff.cpp  Damege.cpp  Debuff.cpp  Disease.cpp  Effect.cpp  ForceMove.cpp  Guard.cpp  Heal.cpp  ImmediateCharacteristicEffect.cpp  ImmediateEffect.cpp  Mark.cpp  MarkedAsEndBattle.cpp  MarkedAsTurnable.cpp  Move.cpp  PassiveBuff.cpp  PassiveDebuff.cpp  PercentHeal.cpp  PermanentEffect.cpp  Stun.cpp
src/enemies/: BrigandCutthroat.cpp  BrigandFusilier.cpp  BrigandRaider.cpp  CultistAcolyte.cpp  Enemy.cpp
src/entity/: Boss.cpp  Enemy.cpp  Entity.cpp  Hero.cpp  MarkedAsAutoTurn.cpp  NPC.cpp
src/events/: BossEncounter.cpp  Chest.cpp  ChooseRoomEvent.cpp  EmptyCell.cpp  EnemyEncounter.cpp  EnemyEncounter1.cpp  EnemyEncounter2.cpp  EnemyEncounter3.cpp  NPCEncounter.cpp  Trap.cpp
src/generators/: EffectGenerator.cpp  NumberGenerator.cpp  SkillActionsGenerator.cpp
src/item/: Item.cpp
src/monitor/: Monitor.cpp
src/navigation/: Cell.cpp  Hall.cpp  Map.cpp  Position.cpp  Room.cpp
src/player/: Inventory.cpp  Player.cpp
src/skillDesignes/: BlanketFire.cpp  RangeSkill.cpp  SizedSkill.cpp  Skill.cpp  UniqueSizedSkill.cpp
tests/: CMakeLists.txt  EffectTest.cpp  EffectTest.h  main.cpp
tests/EnemyEncounterTest/: CMakeLists.txt  main.cpp
tests/MapTest/: CMakeLists.txt  main.cpp
tests/Monitor/: CMakeLists.txt  main.cpp
tests/SkillTest/: CMakeLists.txt  main.cpp
(+104 files in other folders)
