cmake_minimum_required(VERSION 3.24)
project(SkillTest)

set(CMAKE_CXX_STANDARD 17)

include_directories(../../include)

add_executable(skillTest
        main.cpp
        ../../src/entity/Entity.cpp
        ../../src/effects/ForceMove.cpp
        ../../src/effects/Move.cpp
        ../../src/BattleFieldChanger.cpp
        ../../src/BattleField.cpp
        ../../src/Squad.cpp
        ../../src/SquadChanger.cpp
        ../../src/effects/ImmediateEffect.cpp
        ../../src/effects/PermanentEffect.cpp
        ../../src/changers/EffectChanger.cpp
        ../../src/effects/MarkedAsTurnable.cpp
        ../../src/effects/MarkedAsEndBattle.cpp
        ../../src/enemies/CultistAcolyte/EldritchPush.cpp
        ../../src/skillDesignes/Skill.cpp
        ../../src/skillDesignes/RangeSkill.cpp
        ../../src/generators/NumberGenerator.cpp
        ../../src/effects/Damege.cpp
        ../../src/effects/ImmediateCharacteristicEffect.cpp
        ../../src/changers/EntityChanger.cpp
        ../../src/enemies/CultistAcolyte/StressfulIncantation.cpp
        ../../src/enemies/Webber/Web.cpp
        ../../src/effects/Mark.cpp
        ../../src/effects/Stun.cpp
        ../../src/effects/Debuff.cpp
        ../../src/effects/Heal.cpp
        ../../src/effects/Buff.cpp
        ../../src/enemies/Webber/Bite.cpp
        ../../src/effects/Blight.cpp
        ../../src/effects/AutoAction.cpp
        ../../src/effects/Bleed.cpp
        ../../src/enemies/BrigandFusilier/BrigandFusilier.cpp
        ../../src/enemies/BrigandFusilier/RushedShot.cpp
        ../../src/entity/Enemy.cpp
        ../../src/enemies/CultistAcolyte/CultistAcolyte.cpp
        ../../src/enemies/CultistAcolyte/EldritchPull.cpp
        ../../src/enemies/BrigandFusilier/BlanketFire.cpp
        ../../src/enemies/BrigandRaider/BrigandRaider.cpp
        ../../src/enemies/BrigandRaider/Shank.cpp
        ../../src/enemies/BrigandRaider/SliceAndDice.cpp
        ../../src/enemies/BrigandRaider/UppercutSlice.cpp
        ../../src/enemies/BrigandRaider/HarmlessPoke.cpp
        ../../src/entity/Hero.cpp
        ../../src/heroes/BountyHunter/BountyHunter.cpp
        ../../src/heroes/BountyHunter/Caltrops.cpp
        ../../src/heroes/BountyHunter/CollectBounty.cpp
        ../../src/heroes/BountyHunter/ComeHither.cpp
        ../../src/heroes/BountyHunter/FinishHim.cpp
        ../../src/heroes/BountyHunter/FlashBang.cpp
        ../../src/heroes/BountyHunter/MarkForDeath.cpp
        ../../src/heroes/BountyHunter/UpperCut.cpp
        ../../src/heroes/Hellion/Hellion.cpp
        ../../src/heroes/Hellion/AdrenalineRush.cpp
        ../../src/heroes/Hellion/BarbaricYAWP.cpp
        ../../src/heroes/Hellion/BleedOut.cpp
        ../../src/heroes/Hellion/Breakthrough.cpp
        ../../src/heroes/Hellion/IfItBleeds.cpp
        ../../src/heroes/Hellion/IronSwan.cpp
        ../../src/heroes/Hellion/WickedHack.cpp
        ../../src/heroes/ManAtArms/ManAtArms.cpp
        ../../src/heroes/ManAtArms/Bellow.cpp
        ../../src/heroes/ManAtArms/Bolster.cpp
        ../../src/heroes/ManAtArms/Command.cpp
        ../../src/heroes/ManAtArms/Crush.cpp
        ../../src/heroes/ManAtArms/Defender.cpp
        ../../src/heroes/ManAtArms/Rampart.cpp
        ../../src/heroes/ManAtArms/Retribution.cpp
        ../../src/heroes/Musketeer/Musketeer.cpp
        ../../src/heroes/Musketeer/AimedShot.cpp
        ../../src/heroes/Musketeer/Buckshot.cpp
        ../../src/heroes/Musketeer/CallTheShot.cpp
        ../../src/heroes/Musketeer/PatchUp.cpp
        ../../src/heroes/Musketeer/Sidearm.cpp
        ../../src/heroes/Musketeer/SkeetShot.cpp
        ../../src/heroes/Musketeer/Smokescreen.cpp

        ../../src/enemies/CultistBrawler/CultistBrawler.cpp
        ../../src/enemies/CultistBrawler/RendForTheOldGods.cpp
        ../../src/enemies/CultistBrawler/StumblingScratch.cpp
        ../../src/enemies/Ghoul/Ghoul.cpp
        ../../src/enemies/Ghoul/Rend.cpp
        ../../src/enemies/Ghoul/SkullToss.cpp
        ../../src/enemies/PelagicGrouper/PelagicGrouper.cpp
        ../../src/enemies/PelagicGrouper/SeawardSlash.cpp
        ../../src/enemies/PelagicGrouper/Spearfishing.cpp
        ../../src/enemies/Webber/Webber.cpp
        ../../src/enemies/Webber/Bite.cpp
        ../../src/enemies/Webber/Web.cpp
        ../../src/enemies/SwineSlasher/SwineSlasher.cpp
        ../../src/enemies/SwineSlasher/HookWhereItHurts.cpp
        ../../src/enemies/RabidGnusher/RabidGnusher.cpp
        ../../src/enemies/RabidGnusher/RabidRush.cpp

        ../../src/Item/FortifyingGarlic.cpp
        ../../src/Item/Absinthe.cpp
        ../../src/Item/LickWounds.cpp
        ../../src/Item/BloodiedNeckerchief.cpp
        ../../src/Item/Item.cpp

)
